--- a/templates/index.html
+++ b/templates/index.html
@@ -21,4 +21,5 @@
     </div>
 {% endblock %}
 {% block script %}
-<script src="{{ url_for('static', filename='main.js') }}"
+<script src="{{ url_for('static', filename='main.js') }}"></script>
+{% endblock %}
