created another page to visualize/chart specific algorithms instead of just the time complexities.

--- a/templates/base.html
+++ b/templates/base.html
@@ -16,9 +16,9 @@
             {% block content %}{% endblock %}
         </main>
         <footer>
-            <p>Created for learning purposes, uses python flask, html, CSS, and JS</p>
-            <p><i>Created by Kenneth Dotzler. ChatGPT was used for some code structure 
-                and overall assistance</i></p>
+            <p>Created for learning purposes. Uses python flask, html, CSS, and JS</p>
+            <p><i>Created by Kenneth Dotzler. ChatGPT was used for some code structure, debugging,  
+                and overall assistance.</i></p>
         </footer>
         <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
         {% block scripts %}{% endblock %}
