--- a/templates/base.html
+++ b/templates/base.html
@@ -10,8 +10,8 @@
                 theme: {
                     extend: {
                         colors: {
-                            primary: '2563eb',
-                            secondary: '475569'                    
+                            primary: '#2563eb',
+                            secondary: '#475569'                    
                         }
                     }
                 }
@@ -25,7 +25,7 @@
                 <h1 class="text-3xl font-bold text-primary">Time Complexity Visualizer</h1>
                 <p class="text-gray-500">visualize different algorithms and their time complexities</p>
             </div>
-            <nav class="mt-4 flex justify-center space-x-8 text-blue-600">
+            <nav aria-label="Main Navigation" class="mt-4 flex justify-center space-x-8 text-blue-600">
                 <a href="{{ url_for('index') }}" class="hover:underline">Home</a>
                 <a href="{{ url_for('complexPage') }}" class="hover:underline">Complexities</a>
                 <a href="{{ url_for('algoPage') }}" class="hover:underline">Algorithms</a>
