--- a/templates/complexity.html
+++ b/templates/complexity.html
@@ -8,15 +8,15 @@
                 <select id="complex" class="w-full border border-gray-300 rounded-md p-2"></select>
             </section>
 
-            <section class="info bg-white shadow-md rounded-lg p-6">
+            <section class="info bg-white shadow-md rounded-lg p-4">
                 <h2 id="complexName" class="text-2xl font-bold mb-2">Complexity</h2>
                 <h4 id="complexTime" class="text-gray-700 mb-4">Time Complexity: <strong>N/A</strong></h4>
                 <p id="complexDescription" class="text-gray-600">No Time Complexity selected</p>
             </section>
         </div>
 
-        <section class="mt-8">
-            <canvas id="complexChart" class="w-full h-64 rounded-lg shadow-lg"></canvas>
+        <section class="mt-4 flex justify-center">
+            <canvas id="complexChart" class="w-full max-w-2xl max-h-96 rounded-lg shadow-lg"></canvas>
         </section>
         
     </div>
